Implemented Todo's endpoints as well as auth & minor fixes
