# src/routes/taskRoutes.js
@@ -1,0 +1,14 @@
+const express = require('express');
+const { getTasks, createTask, updateTask, deleteTask } = require('../controllers/taskController');
+const authenticateToken = require('../middlewares/auth');
+
+const router = express.Router();
+
+router.use(authenticateToken);
+
+router.get('/', getTasks);
+router.post('/', createTask);
+router.put('/:id', updateTask);
+router.delete('/:id', deleteTask);
+
+module.exports = router;
